--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,6 @@
 <title>Infinite</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/react-grid-layout/0.16.4/css/styles.min.css>
 <div id="app"></div>
 <script src="bundle.js"></script>
