client syncs entries from server with websockets and keeps them all.

--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 
 <meta charset="UTF-8"/>
-<title>Infinite</title>
+<title>Nuria</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/react-grid-layout/0.16.4/css/styles.min.css>
