use user id instead of user name everywhere.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/react-grid-layout/0.16.4/css/styles.min.css>
 <div id="app"></div>
 <script>
-window.user = {name: 'fiatjaf', id: 1}
+window.user = {name: 'fiatjaf', id: 'fiatjaf'}
 </script>
 <script src="bundle.js"></script>
