--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/react-grid-layout/0.16.4/css/styles.min.css>
+<link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/react-select/1.2.1/react-select.min.css>
 <div id="app"></div>
 <script>
 window.user = {name: 'fiatjaf', id: 'fiatjaf'}
